--- a/movies/templates/movies/movie.html
+++ b/movies/templates/movies/movie.html
@@ -19,7 +19,7 @@
 <p>Please update your details for <b>{{ movie.name }}</b>:</p>
 
 <form method="post" action="{% url 'movies:add_details' movie.pk %}?next={{ request.path|urlencode }}" class="form">
-  
+
   {% csrf_token %}
   {% bootstrap_form form %}
 
@@ -29,8 +29,8 @@
 </form>
 
 {% else %}
-Shown in Round: <span class="float-right">{{ game_round.round_number }}</span><br>  
-Date Watched: <span class="float-right">{{ movie.date_watched|date:'M d, Y'}}</span><br> 
+Shown in Round: <span class="float-right">{{ game_round.round_number }}</span><br>
+Date Watched: <span class="float-right">{{ movie.date_watched|date:'M d, Y'}}</span><br>
 
 <br>
 <!-- note: get_ and _display are prepended / appended to the actual field names below, because
@@ -66,23 +66,38 @@ Date Watched: <span class="float-right">{{ movie.date_watched|date:'M d, Y'}}</s
   <a href="{% url 'movies:update_details' user_movie_details.pk %}"><b>Edit Details</b></a></p>
   {% endif %}
 
-<!-- do a bool check here to see if the round that this movie belongs to is complete or not, if it is, display the results -->
 
     {% if game_round.round_completed %}
-        <br>
-        
+
         <h5 class="border-bottom pb-2 mb-4">Movie Details - Round Completed</h5>
 
         <ul class="pl-0" style="list-style-type:none">
             <li>This movie was chosen by:<span class="float-right">{{ user_that_chose_movie.username }}</span></li>
             <li>The average rating for this movie was:<span class="float-right">{{ movie_avg_rating }}</span></li>
 
-            <li>Users who correctly blamed <b>{{ user_that_chose_movie.username }}</b>:<span class="float-right">...</span></li>
-            <br>
-            <li># of Users who had already seen it:</li>
-            <li># of Users who had never heard of it:</li>
-        </ul>
+            <!--<li>Users who correctly blamed <b>{{ user_that_chose_movie.username }}</b>:<span class="float-right">...</span></li>-->
+            <!--<br>-->
+            <!--<li># of Users who had already seen it:</li>-->
+            <!--<li># of Users who had never heard of it:</li>-->
 
+        <br>
+        <li class="mb-3"><h5>Deep Hurting Scores:</h5></li>
+          <ul class="pl-0" style="list-style-type:none">
+            {% for rating_dict in movie_ratings %}
+            <li>{{ rating_dict.username }}<span class="float-right">{{ rating_dict.rating }}</span></li>
+            {% endfor %}
+          </ul>
+
+            {% if movie_comments %}
+            <br>
+              <li class="mb-3"><h5>Comments:</h5></li>
+                <ul class="pl-3" style="list-style-type:none">
+                {% for comment_dict in movie_comments %}
+                <li class="mb-3">"{{ comment_dict.comment }}"<br>&nbsp;&nbsp;&nbsp;- <i>{{ comment_dict.username }}</i></li>
+                {% endfor %}
+               </ul>
+            {% endif %}
+        </ul>
 
     {% endif %}
 <br>
@@ -91,5 +106,5 @@ Date Watched: <span class="float-right">{{ movie.date_watched|date:'M d, Y'}}</s
 
 {% endif %}
 
-
+<br>
 {% endblock content %}
