--- a/movies/templates/movies/results.html
+++ b/movies/templates/movies/results.html
@@ -19,7 +19,7 @@
 
 
 {% if active_round_exists %}
-  
+
   {% if not round_concluded %}<!-- this is where we display that status of user detail submissions for an in-progress round -->
 
       <ul class="pl-0" style="list-style-type:none">
@@ -47,7 +47,7 @@
               <small>none</small>
             {% endfor %}
             </span></li>
-        
+
             <li>Details Needed:<span class="float-right">
             {% for participant in status.incomplete %}
               &nbsp;<small>{{ participant.username }}</small>
@@ -69,7 +69,7 @@
         <p>This Round is ready to be Concluded by the Admin!</p>
         {% endif %}
       {% endif %}
-  
+
   {% else %} <!-- this is where the Round results are displayed in full -->
 
 <!--   <h3 class="text-center">{{ current_round.winner.username }} &nbsp;Wins!</h3> -->
@@ -84,9 +84,9 @@
       <li><b>{{ urd.rank.rank_int }}.</b>&nbsp;&nbsp;<a href="{% url 'movies:user_results' urd.pk %}?next={{ request.path|urlencode }}">{{ urd.user.username }}</a><span class="float-right">{{ urd.total_points }}<small>&nbsp;&nbsp;/&nbsp;&nbsp;{{ urd.movie_average_rating }}</small></span></li>
     {% endfor %}
   </ul>
-  
+
   <br>
-  <p>Click a Participant's name above to see <i>detailed results</i> for that user.</p>
+  <p>Click a Participant's name above to see detailed results for that user.</p>
 
   <br>
 
@@ -97,6 +97,9 @@
     <li><a href="{{ pair.1.get_absolute_url }}?next={{ request.path|urlencode }}">{{ pair.1.name }}</a><span class="float-right">{{ pair.0.username }}</span></li>
   {% endfor %}
   </ul>
+
+  <br>
+  <p>Click a Movie title above to see detailed results for that movie.</p>
 
 <br>
 
