syncing all repos

--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -21,4 +21,9 @@
     <!-- <input type="hidden" name="next" value="{{ request.GET.next }}"> -->
 </form>
 
+<br>
+<p>Need an account?
+<a href="{% url 'register' %}">Register Here</a></p>
+<br>
+
 {% endblock content %}
