--- a/movies/templates/movies/results.html
+++ b/movies/templates/movies/results.html
@@ -86,7 +86,7 @@
   </ul>
 
   <br>
-  <p>Click a Participant's name above to see detailed results for that user.</p>
+  <p>Click a Participant's name to see detailed results for that user.</p>
 
   <br>
 
@@ -99,7 +99,7 @@
   </ul>
 
   <br>
-  <p>Click a Movie title above to see detailed results for that movie.</p>
+  <p>Click a Movie title to see detailed results for that movie.</p>
 
 <br>
 
