fixed overview round count

--- a/movies/templates/movies/overview.html
+++ b/movies/templates/movies/overview.html
@@ -18,7 +18,7 @@ Click a Movie or User name for details.</p>
 
 <h5 class="border-bottom pb-2 mb-4"><small>r&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Movie<span class="float-right">Responsible Party / Avg. Score</small></span></h5> -->
 
-<p>Rounds Completed: <b>{{ rounds|length }}</b><br>
+<p>Rounds Completed: <b>{{ completed_rounds|length }}</b><br>
 Total Movies Watched: <b>{{ movies|length }}</b></p>
 
 <!-- <span class="float-right">Sort By:&nbsp;&nbsp;&nbsp;
