--- a/movies/templates/movies/overview.html
+++ b/movies/templates/movies/overview.html
@@ -56,10 +56,10 @@ Total Movies Watched: <b>{{ movies|length }}</b></p>
          {{ movie.game_round.round_number }}
         </a>
         {% if movie.game_round.round_number < 10 %}
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="{{ movie.get_absolute_url }}?next={{ request.path|urlencode }}">{{ movie.name }}</a>
         {% else %}
-        &nbsp;&nbsp;&nbsp;&nbsp;
+        &nbsp;&nbsp;&nbsp;
         <a href="{{ movie.get_absolute_url }}?next={{ request.path|urlencode }}">{{ movie.name }}</a>
         {% endif %}
 
