fixed overview margin

--- a/movies/templates/movies/overview.html
+++ b/movies/templates/movies/overview.html
@@ -77,7 +77,7 @@ Total Movies Watched: <b>{{ movies|length }}</b></p>
 </ul> -->
 
 
-    <table style="width: 100%;">
+    <table style="width: 100%;" class="mb-4">
      <tr class="border-bottom">
       <th>Round</th>
       <th>Movie</th>
